--- a/SM64O/SM64O.csproj
+++ b/SM64O/SM64O.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadWritingMemory.cs" />
+    <Compile Include="UPnP.cs" />
     <Compile Include="WindowsEmulatorAccessor.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
