--- a/SM64O/SM64O.csproj
+++ b/SM64O/SM64O.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="Characters.cs" />
     <Compile Include="Client.cs" />
+    <Compile Include="ConnectionExtensions.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +65,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="IEmulatorAccessor.cs" />
+    <Compile Include="PacketType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadWritingMemory.cs" />
