--- a/SM64O/SM64O.csproj
+++ b/SM64O/SM64O.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="IEmulatorAccessor.cs" />
+    <Compile Include="NetworkHelper.cs" />
     <Compile Include="PacketType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
