--- a/SM64O/SM64O.csproj
+++ b/SM64O/SM64O.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadWritingMemory.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="WindowsEmulatorAccessor.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
