--- a/SM64O/SM64O.csproj
+++ b/SM64O/SM64O.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadWritingMemory.cs" />
-    <Compile Include="UPnP.cs" />
+    <Compile Include="UPnPWrapper.cs" />
     <Compile Include="WindowsEmulatorAccessor.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -106,6 +106,12 @@
     <None Include="Resources\aaaaah.wav" />
     <None Include="Resources\okay.wav" />
     <None Include="Resources\toad.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Mono.Nat\Mono.Nat.csproj">
+      <Project>{a0f2353d-730f-4f67-bea3-ad5de270c72d}</Project>
+      <Name>Mono.Nat</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
