--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "http://smmdb.ddns.net/net64",
   "dependencies": {
-    "electron": "^1.8.1",
+    "electron": "^1.6.14",
     "got": "^7.1.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
@@ -41,7 +41,8 @@
     "redux-immutable": "^4.0.0",
     "rimraf": "^2.6.2",
     "tasklist": "^3.1.0",
-    "winprocess": "0.0.2"
+    "winprocess": "0.0.2",
+    "ws": "^3.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
