--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "net64plus",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Net64+ client",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
   "homepage": "http://smmdb.ddns.net/net64",
   "dependencies": {
     "electron": "^1.6.14",
+    "ffi": "^2.2.0",
     "got": "^7.1.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
