--- a/package.json
+++ b/package.json
@@ -60,8 +60,11 @@
     "electron-debug": "^1.4.0",
     "electron-packager": "^9.1.0",
     "electron-rebuild": "^1.6.0",
+    "eslint": "^4.12.1",
+    "eslint-config-standard": "^10.2.1",
     "html-webpack-plugin": "^2.30.1",
     "mocha": "^4.0.1",
+    "standard": "^10.0.3",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0"
   }
