--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack --env=dev && cd ./build && electron .",
     "build": "webpack --env=prod && node ./build-app",
-    "rebuild": "electron-rebuild -v 1.7.9 -f -w winprocess"
+    "rebuild": "electron-rebuild -v 1.7.9 -f -w winprocess",
+    "lint": "eslint --ext .js,.jsx src"
   },
   "repository": {
     "type": "git",
@@ -62,6 +63,8 @@
     "electron-rebuild": "^1.6.0",
     "eslint": "^4.12.1",
     "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-react": "^7.5.1",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "mocha": "^4.0.1",
     "standard": "^10.0.3",
