--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   "homepage": "http://smmdb.ddns.net/net64",
   "dependencies": {
     "electron": "^1.6.14",
-    "ffi": "^2.2.0",
     "got": "^7.1.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
@@ -69,6 +68,7 @@
     "mocha": "^4.0.1",
     "standard": "^10.0.3",
     "url-loader": "^0.6.2",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "webpack-sources": "^1.0.1"
   }
 }
