--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "standard": "^10.0.3",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
-    "webpack-sources": "^1.0.1"
+    "webpack-sources": "^1.0.1",
+    "worker-loader": "^1.1.0"
   }
 }
