--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "net64plus",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Net64+ client",
   "main": "index.js",
   "scripts": {
@@ -29,6 +29,7 @@
   "homepage": "http://smmdb.ddns.net/net64",
   "dependencies": {
     "axios": "^0.17.1",
+    "csv-parse": "^2.0.0",
     "electron": "^1.6.14",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
@@ -43,7 +44,6 @@
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
     "rimraf": "^2.6.2",
-    "tasklist": "^3.1.0",
     "winprocess": "0.0.2",
     "ws": "^3.2.0"
   },
@@ -69,7 +69,6 @@
     "standard": "^10.0.3",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
-    "webpack-sources": "^1.0.1",
-    "worker-loader": "^1.1.0"
+    "webpack-sources": "^1.0.1"
   }
 }
