--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "electron-rebuild": "^1.6.0",
     "eslint": "^4.12.1",
     "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-jsdoc": "^3.3.1",
+    "eslint-plugin-private-props": "^0.3.0",
     "eslint-plugin-react": "^7.5.1",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
