--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,13 @@
 {
+  "parser": "typescript-eslint-parser",
   "extends": [
-    "standard",
+    "standard-with-typescript",
     "plugin:react/recommended"
   ],
   "plugins": [
+    "typescript",
     "react",
-    "jsdoc",
-    "private-props"
+    "jsdoc"
   ],
   "parserOptions": {
     "ecmaFeatures": {
@@ -14,6 +15,8 @@
     }
   },
   "rules": {
+    "indent": "off",
+    "indent-legacy": ["error", 2, { "SwitchCase": 1 }],
     "react/prop-types": "off",
     "react/jsx-no-target-blank": "off",
     "jsdoc/check-param-names": 1,
@@ -27,13 +30,7 @@
     "jsdoc/require-param-type": 1,
     "jsdoc/require-returns-description": 1,
     "jsdoc/require-returns-type": 1,
-    "private-props/no-use-outside": [2, {
-      "privateMatchers": [
-        "^_", 
-        "^handle.",
-        "^on."
-      ]
-    }]
+    "typescript/explicit-member-accessibility": "off"
   },
   "env": {
     "browser": true,
