--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "webpack --env=dev && cd ./build && electron .",
     "build": "webpack --env=prod && node ./build-app",
-    "rebuild": "electron-rebuild -v 1.6.14 -f -w winprocess",
-    "lint": "eslint --ext .js,.jsx src",
+    "rebuild": "electron-rebuild -v 1.6.16 -f -w winprocess",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "test": "jest spec"
   },
   "repository": {
@@ -31,14 +31,28 @@
   "jest": {
     "setupFiles": [
       "./jest-browser-setup.js"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
     ]
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "csv-parse": "^2.0.0",
-    "electron": "^1.6.14",
+    "bufferutil": "^3.0.3",
+    "csv-parse": "https://github.com/Tarnadas/node-csv-parse.git",
+    "deepmerge": "^2.0.1",
+    "electron": "1.6.16",
     "history": "^4.7.2",
-    "immutable": "^3.8.2",
+    "immer": "^0.8.1",
     "marked": "^0.3.9",
     "node-emoji": "^1.8.1",
     "react": "^16.0.0",
@@ -48,12 +62,28 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
-    "redux-immutable": "^4.0.0",
     "rimraf": "^2.6.2",
+    "utf-8-validate": "^4.0.0",
     "winprocess": "0.0.2",
     "ws": "^3.2.0"
   },
   "devDependencies": {
+    "@types/csv-parse": "^1.1.11",
+    "@types/deepmerge": "^1.3.3",
+    "@types/history": "^4.6.2",
+    "@types/jest": "^22.0.1",
+    "@types/marked": "^0.3.0",
+    "@types/node-emoji": "^1.8.0",
+    "@types/react": "^16.0.34",
+    "@types/react-dom": "^16.0.3",
+    "@types/react-redux": "^5.0.14",
+    "@types/react-router": "^4.0.20",
+    "@types/react-router-dom": "^4.2.3",
+    "@types/react-router-redux": "^5.0.11",
+    "@types/rimraf": "^2.0.2",
+    "@types/text-encoding": "^0.0.32",
+    "@types/ws": "^4.0.0",
+    "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-react-jsx": "^6.24.1",
@@ -65,16 +95,24 @@
     "electron-debug": "^1.4.0",
     "electron-packager": "^9.1.0",
     "electron-rebuild": "^1.6.0",
-    "eslint": "^4.12.1",
+    "eslint": "4.15.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard-with-typescript": "^2.0.1",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsdoc": "^3.3.1",
-    "eslint-plugin-private-props": "^0.3.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-typescript": "^0.8.1",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.5",
     "standard": "^10.0.3",
     "text-encoding": "^0.6.4",
+    "ts-jest": "^22.0.1",
+    "typescript": "^2.8.0-dev.20180126",
+    "typescript-eslint-parser": "^12.0.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
     "webpack-sources": "^1.0.1"
