--- a/proto/Makefile
+++ b/proto/Makefile
@@ -1,6 +1,6 @@
 PACKAGE = net64-proto
 
-PROTO_DIRS = . server-client shared
+PROTO_DIRS = . server-client shared client-server
 PROTO_FILES = $(foreach sdir,$(PROTO_DIRS),$(wildcard $(sdir)/*.proto))
 SRC_OUT = ../src/protobuf
 
@@ -9,3 +9,7 @@ cpp:
 
 csharp:
 	protoc --csharp_out=$(SRC_OUT) $(PROTO_FILES)
+
+clean:
+	rm -r $(SRC_OUT)
+	mkdir $(SRC_OUT)
