chore(compat-version): Move compatVersion to package.json
It was previously hard coded and sent by handshake messages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "net64plus",
   "version": "2.0.0",
+  "compatVersion": "1.0.0",
   "description": "Net64+ client",
   "main": "index.js",
   "scripts": {
