--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "start": "webpack --env=dev && cd ./build && electron .",
     "build": "webpack --env=prod && node ./build-app",
+    "build:dev": "webpack --env=dev && node ./build-app",
     "build:proto": "pbjs -t static-module -w commonjs -p ./proto -o ./proto/ServerClientMessage.js ./proto/ServerClientMessage.proto && pbts -o ./proto/ServerClientMessage.d.ts ./proto/ServerClientMessage.js && pbjs -t static-module -w commonjs -p ./proto -o ./proto/ClientServerMessage.js ./proto/ClientServerMessage.proto && pbts -o ./proto/ClientServerMessage.d.ts ./proto/ClientServerMessage.js",
-    "rebuild": "electron-rebuild -v 1.6.16 -f -w winprocess",
+    "rebuild": "electron-rebuild -v 1.8.3 -f -w winprocess",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "test": "jest spec"
   },
@@ -52,7 +53,7 @@
     "bufferutil": "^3.0.3",
     "csv-parse": "https://github.com/Tarnadas/node-csv-parse.git",
     "deepmerge": "^2.0.1",
-    "electron": "1.6.16",
+    "electron": "1.8",
     "history": "^4.7.2",
     "immer": "^0.8.1",
     "marked": "^0.3.9",
@@ -111,6 +112,7 @@
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.5",
+    "node-abi": "2.3",
     "standard": "^10.0.3",
     "text-encoding": "^0.6.4",
     "ts-jest": "^22.0.1",
