--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/rimraf": "^2.0.2",
     "@types/text-encoding": "^0.0.32",
     "@types/ws": "^4.0.0",
+    "autoprefixer": "^8.2.0",
     "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -95,6 +96,7 @@
     "babel-preset-env": "^1.6.0",
     "babili-webpack-plugin": "^0.1.2",
     "core-js": "^2.5.1",
+    "css-loader": "^0.28.11",
     "devtron": "^1.4.0",
     "electron-debug": "^1.4.0",
     "electron-packager": "^9.1.0",
@@ -109,11 +111,16 @@
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-typescript": "^0.8.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.5",
     "node-abi": "2.3",
+    "node-sass": "^4.8.3",
+    "postcss-loader": "^2.1.3",
+    "sass-loader": "^6.0.7",
     "standard": "^10.0.3",
+    "style-loader": "^0.20.3",
     "text-encoding": "^0.6.4",
     "ts-jest": "^22.0.1",
     "typescript": "^2.8.0-dev.20180126",
