--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "net64plus",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "compatVersion": "1.0.0",
   "description": "Net64+ client",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "build": "webpack --env=prod && node ./build-app",
     "build:dev": "webpack --env=dev && node ./build-app",
     "build:proto": "pbjs -t static-module -w commonjs -p ./proto -o ./proto/ServerClientMessage.js ./proto/ServerClientMessage.proto && pbts -o ./proto/ServerClientMessage.d.ts ./proto/ServerClientMessage.js && pbjs -t static-module -w commonjs -p ./proto -o ./proto/ClientServerMessage.js ./proto/ClientServerMessage.proto && pbts -o ./proto/ClientServerMessage.d.ts ./proto/ClientServerMessage.js",
-    "rebuild": "electron-rebuild -v 1.8.3 -f -w winprocess",
+    "rebuild": "electron-rebuild -v 1.8.3 -f -w winprocess,process-list",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "test": "jest spec"
   },
@@ -60,6 +60,7 @@
     "immer": "^1.3.1",
     "marked": "^0.4.0",
     "node-emoji": "^1.8.1",
+    "process-list": "^1.2.3",
     "protobufjs": "^6.8.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
