--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prebuild:linux": "electron-rebuild -v 1.8.3 -f -w process-list",
     "prebuild:move": "mv node_modules/process-list/bin/linux-x64-57/process-list.node build/processlist-linux.node",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
-    "test": "jest spec"
+    "test": "jest spec",
+    "tsc": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -59,18 +60,18 @@
     "dompurify": "^1.0.4",
     "electron": "1.8",
     "history": "^4.7.2",
-    "immer": "^1.3.1",
+    "immer": "^2.0.0",
     "marked": "^0.4.0",
     "node-emoji": "^1.8.1",
     "process-list": "^1.2.3",
     "protobufjs": "^6.8.4",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-redux": "5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.6",
-    "redux": "^3.7.2",
+    "react-router-redux": "^5.0.0-alpha.9",
+    "redux": "^4.0.1",
     "rimraf": "^2.6.2",
     "tar": "^4.4.8",
     "utf-8-validate": "^4.0.0",
@@ -84,15 +85,15 @@
     "@types/jest": "^22.0.1",
     "@types/marked": "^0.3.0",
     "@types/node-emoji": "^1.8.0",
-    "@types/react": "^16.0.34",
-    "@types/react-dom": "^16.0.3",
+    "@types/react": "^16.8.4",
+    "@types/react-dom": "^16.8.2",
     "@types/react-redux": "^5.0.14",
     "@types/react-router": "^4.0.20",
     "@types/react-router-dom": "^4.2.3",
     "@types/react-router-redux": "^5.0.11",
     "@types/rimraf": "^2.0.2",
     "@types/tar": "^4.0.0",
-    "@types/text-encoding": "^0.0.32",
+    "@types/text-encoding": "^0.0.35",
     "@types/ws": "^4.0.0",
     "autoprefixer": "^8.2.0",
     "awesome-typescript-loader": "^3.4.1",
@@ -128,9 +129,9 @@
     "sass-loader": "^6.0.7",
     "standard": "^10.0.3",
     "style-loader": "^0.20.3",
-    "text-encoding": "^0.6.4",
+    "text-encoding": "^0.7.0",
     "ts-jest": "^22.0.1",
-    "typescript": "^2.8.0-dev.20180126",
+    "typescript": "^3.3.3333",
     "typescript-eslint-parser": "^12.0.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
