build: update electron

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "csv-parse": "https://github.com/Tarnadas/node-csv-parse.git",
     "deepmerge": "^2.0.1",
     "dompurify": "^1.0.4",
-    "electron": "1.8",
+    "electron": "2",
     "history": "^4.7.2",
     "immer": "^2.0.0",
     "marked": "^0.4.0",
@@ -106,7 +106,7 @@
     "core-js": "^2.5.1",
     "css-loader": "^0.28.11",
     "devtron": "^1.4.0",
-    "electron-debug": "^1.4.0",
+    "electron-debug": "2",
     "electron-packager": "^9.1.0",
     "electron-rebuild": "^1.8.2",
     "eslint": "4.15.0",
