--- a/package.json
+++ b/package.json
@@ -108,16 +108,16 @@
     "electron-debug": "2",
     "electron-packager": "^9.1.0",
     "electron-rebuild": "^1.8.2",
-    "eslint": "4.15.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-config-standard-with-typescript": "^2.0.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsdoc": "^3.3.1",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.5.1",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-typescript": "^0.8.1",
+    "eslint": "^5.14.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-with-typescript": "^6.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsdoc": "^4.1.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-typescript": "^0.14.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
@@ -130,8 +130,8 @@
     "style-loader": "^0.20.3",
     "text-encoding": "^0.7.0",
     "ts-jest": "^22.0.1",
-    "typescript": "^3.3.3333",
-    "typescript-eslint-parser": "^12.0.0",
+    "typescript": "3.2",
+    "typescript-eslint-parser": "^22.0.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
     "webpack-sources": "^1.0.1"
