--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
   "scripts": {
     "start": "webpack --env=dev && cd ./build && electron .",
     "start:debug": "webpack --env=dev",
-    "build": "webpack --env=prod && node ./build-app",
-    "build:dev": "webpack --env=dev && node ./build-app",
+    "build": "yarn clean && webpack --env=prod && node ./build-app",
+    "build:dev": "yarn clean && webpack --env=dev && node ./build-app",
     "build:proto": "pbjs -t static-module -w commonjs -p ./proto -o ./proto/ServerClientMessage.js ./proto/ServerClientMessage.proto && pbts -o ./proto/ServerClientMessage.d.ts ./proto/ServerClientMessage.js && pbjs -t static-module -w commonjs -p ./proto -o ./proto/ClientServerMessage.js ./proto/ClientServerMessage.proto && pbts -o ./proto/ClientServerMessage.d.ts ./proto/ClientServerMessage.js",
     "prebuild:win": "electron-rebuild -v 2.0.17 -f -w winprocess,process-list",
     "prebuild:linux": "electron-rebuild -v 2.0.17 -f -w process-list",
     "prebuild:move": "mv node_modules/process-list/bin/linux-x64-57/process-list.node build/processlist-linux.node",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "test": "jest spec",
-    "tsc": "tsc --noEmit"
+    "tsc": "tsc --noEmit",
+    "clean": "git clean -x -f build"
   },
   "repository": {
     "type": "git",
