completed hotkeybutton UI

--- a/package.json
+++ b/package.json
@@ -58,9 +58,10 @@
     "bufferutil": "^4.0.1",
     "csv-parse": "3",
     "deepmerge": "^2.0.1",
-    "discord-rich-presence": "0.0.8",
+    "discord-rich-presence": "^0.0.8",
     "dompurify": "^1.0.4",
     "electron": "2",
+    "encoding": "^0.1.12",
     "history": "^4.7.2",
     "immer": "^2.0.0",
     "marked": "^0.4.0",
@@ -74,6 +75,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.1",
+    "register-scheme": "^0.0.2",
     "rimraf": "^2.6.2",
     "tar": "^4.4.8",
     "utf-8-validate": "^5.0.2",
