--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "deepmerge": "^2.0.1",
     "discord-rich-presence": "^0.0.8",
     "dompurify": "^1.0.4",
-    "electron": "2",
+    "electron-localshortcut": "^3.2.1",
     "encoding": "^0.1.12",
     "history": "^4.7.2",
     "immer": "^2.0.0",
@@ -74,7 +74,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "redux": "^4.0.1",
+    "redux": "^4.0.5",
     "register-scheme": "^0.0.2",
     "rimraf": "^2.6.2",
     "tar": "^4.4.8",
@@ -85,6 +85,7 @@
     "@types/csv-parse": "^1.1.11",
     "@types/deepmerge": "^1.3.3",
     "@types/dompurify": "^0.0.31",
+    "@types/electron-localshortcut": "^3.1.0",
     "@types/history": "^4.6.2",
     "@types/jest": "^22.0.1",
     "@types/marked": "^0.3.0",
