--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "webpack --env=dev && cd ./build && electron .",
     "start:debug": "webpack --env=dev",
-    "build": "yarn clean && webpack --env=prod && node ./build-app",
+    "build": "webpack --env=prod && node ./build-app",
     "build:dev": "yarn clean && webpack --env=dev && node ./build-app",
     "build:proto": "pbjs -t static-module -w commonjs -p ./proto -o ./proto/ServerClientMessage.js ./proto/ServerClientMessage.proto && pbts -o ./proto/ServerClientMessage.d.ts ./proto/ServerClientMessage.js && pbjs -t static-module -w commonjs -p ./proto -o ./proto/ClientServerMessage.js ./proto/ClientServerMessage.proto && pbts -o ./proto/ClientServerMessage.d.ts ./proto/ClientServerMessage.js",
     "prebuild:win": "electron-rebuild -v 2.0.17 -f -w winprocess,process-list",
@@ -60,8 +60,8 @@
     "deepmerge": "^2.0.1",
     "discord-rich-presence": "^0.0.8",
     "dompurify": "^1.0.4",
+    "electron": "2",
     "electron-localshortcut": "^3.2.1",
-    "encoding": "^0.1.12",
     "history": "^4.7.2",
     "immer": "^2.0.0",
     "marked": "^0.4.0",
@@ -74,8 +74,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "redux": "^4.0.5",
-    "register-scheme": "^0.0.2",
+    "redux": "^4.0.1",
     "rimraf": "^2.6.2",
     "tar": "^4.4.8",
     "utf-8-validate": "^5.0.2",
@@ -85,7 +84,6 @@
     "@types/csv-parse": "^1.1.11",
     "@types/deepmerge": "^1.3.3",
     "@types/dompurify": "^0.0.31",
-    "@types/electron-localshortcut": "^3.1.0",
     "@types/history": "^4.6.2",
     "@types/jest": "^22.0.1",
     "@types/marked": "^0.3.0",
