--- a/package.json
+++ b/package.json
@@ -97,6 +97,8 @@
     "@types/tar": "^4.0.0",
     "@types/text-encoding": "^0.0.35",
     "@types/ws": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^2",
+    "@typescript-eslint/parser": "^2",
     "autoprefixer": "^8.2.0",
     "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.26.0",
@@ -111,16 +113,14 @@
     "electron-debug": "2",
     "electron-packager": "^9.1.0",
     "electron-rebuild": "^1.8.2",
-    "eslint": "^5.14.1",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-with-typescript": "^6.0.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint": "^6",
+    "eslint-config-standard-with-typescript": "^13",
+    "eslint-plugin-import": "^2",
     "eslint-plugin-jsdoc": "^4.1.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-node": "^9",
+    "eslint-plugin-promise": "^4",
     "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-typescript": "^0.14.0",
+    "eslint-plugin-standard": "^4",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
@@ -129,12 +129,10 @@
     "node-sass": "^4.8.3",
     "postcss-loader": "^2.1.3",
     "sass-loader": "^6.0.7",
-    "standard": "^10.0.3",
     "style-loader": "^0.20.3",
     "text-encoding": "^0.7.0",
     "ts-jest": "^22.0.1",
-    "typescript": "3.2",
-    "typescript-eslint-parser": "^22.0.0",
+    "typescript": "3.7",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
     "webpack-sources": "^1.0.1"
