--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "csv-parse": "3",
     "deepmerge": "^2.0.1",
     "discord-rich-presence": "0.0.8",
-    "dompurify": "^1.0.4",
+    "dompurify": "^2",
     "electron": "2",
     "history": "^4.7.2",
     "immer": "^2.0.0",
@@ -80,9 +80,17 @@
     "ws": "^3.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7",
+    "@babel/plugin-proposal-class-properties": "^7",
+    "@babel/plugin-proposal-object-rest-spread": "^7",
+    "@babel/plugin-syntax-dynamic-import": "^7",
+    "@babel/polyfill": "^7",
+    "@babel/preset-env": "^7",
+    "@babel/preset-react": "^7",
+    "@babel/preset-typescript": "^7",
     "@types/csv-parse": "^1.1.11",
     "@types/deepmerge": "^1.3.3",
-    "@types/dompurify": "^0.0.31",
+    "@types/dompurify": "^2",
     "@types/history": "^4.6.2",
     "@types/jest": "^22.0.1",
     "@types/marked": "^0.3.0",
@@ -100,15 +108,10 @@
     "@typescript-eslint/eslint-plugin": "^2",
     "@typescript-eslint/parser": "^2",
     "autoprefixer": "^8.2.0",
-    "awesome-typescript-loader": "^3.4.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babili-webpack-plugin": "^0.1.2",
-    "core-js": "^2.5.1",
-    "css-loader": "^0.28.11",
+    "babel-loader": "^8",
+    "babel-preset-minify": "^0.5.1",
+    "core-js": "^3",
+    "css-loader": "^3",
     "devtron": "^1.4.0",
     "electron-debug": "2",
     "electron-packager": "^9.1.0",
@@ -121,20 +124,20 @@
     "eslint-plugin-promise": "^4",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3",
     "jest": "^22.0.5",
-    "node-abi": "2.3",
-    "node-sass": "^4.8.3",
+    "mini-css-extract-plugin": "^0.9",
+    "node-sass": "^4",
     "postcss-loader": "^2.1.3",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^8",
     "style-loader": "^0.20.3",
     "text-encoding": "^0.7.0",
     "ts-jest": "^22.0.1",
     "typescript": "3.7",
     "url-loader": "^0.6.2",
-    "webpack": "^3.6.0",
+    "webpack": "^4",
+    "webpack-cli": "^3.3.11",
     "webpack-sources": "^1.0.1"
   },
   "optionalDependencies": {
