replace process list with pslist

--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "build": "webpack --env=prod",
     "build:dev": "webpack --env=dev",
     "build:proto": "pbjs -t static-module -w commonjs -p ./proto -o ./proto/ServerClientMessage.js ./proto/ServerClientMessage.proto && pbts -o ./proto/ServerClientMessage.d.ts ./proto/ServerClientMessage.js && pbjs -t static-module -w commonjs -p ./proto -o ./proto/ClientServerMessage.js ./proto/ClientServerMessage.proto && pbts -o ./proto/ClientServerMessage.d.ts ./proto/ClientServerMessage.js",
-    "prebuild:win": "electron-rebuild -v 2.0.17 -f -w winprocess,process-list",
-    "prebuild:linux": "electron-rebuild -v 2.0.17 -f -w process-list",
-    "prebuild:move": "mv node_modules/process-list/build/Release/processlist.node build/processlist-linux.node",
+    "prebuild:win": "electron-rebuild -v 2.0.17 -f -w winprocess",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "test": "jest spec",
     "tsc": "tsc --noEmit",
@@ -68,8 +66,8 @@
     "immer": "^2.0.0",
     "marked": "^0.4.0",
     "node-emoji": "^1.8.1",
-    "process-list": "^1.2.3",
     "protobufjs": "^6.8.4",
+    "ps-list": "6",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "5",
